<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeLayout"
    android:background="@drawable/login_background"
    tools:context=".fragments.login.OtpFragment">



        <Button
            android:id="@+id/continue_button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="45dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/continue_activation"
            app:layout_constraintEnd_toEndOf="@+id/otp_input_layout"
            app:layout_constraintStart_toStartOf="@+id/otp_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/resendOtp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/app_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/NormalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_email"
            android:textSize="14sp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/otp_input_layout"
             />

        <TextView
            android:id="@+id/textView"
            style="@style/NormalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/verify_account"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_input_layout"
            style="@style/InputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/otp_hint"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintStart_toStartOf="@id/textView4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                style="@style/InputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:importantForAutofill="no"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/resendOtp"
            style="@style/NormalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textSize="16sp"
            android:textColor="@color/forgot_password_color"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_input_layout"
            />




</androidx.constraintlayout.widget.ConstraintLayout>