<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeLayout"
    android:background="@drawable/login_background"
    tools:context=".fragments.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/BoldTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/phone_layout"
        android:text="LOGIN"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/barlow_regular"
        android:textSize="@dimen/_16ssp"
        android:paddingBottom="@dimen/_20sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        style="@style/InputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/mobile_number_hint"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/password_layout"
        android:background="@drawable/edittext_background"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            style="@style/InputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no"
            android:background="@null"
            android:clickable="true"
            android:focusableInTouchMode="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/InputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/phone_layout"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/edittext_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/InputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="24"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@null"
            android:clickable="true"
            android:focusableInTouchMode="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        style="@style/TextViewPinkBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <TextView
        android:id="@+id/forgot_password"
        style="@style/TextViewPinkBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/continue_button"
        app:layout_constraintStart_toStartOf="@+id/continue_button" />



</androidx.constraintlayout.widget.ConstraintLayout>