<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeLayout"
    android:background="@drawable/login_background"
    tools:context=".fragments.login.ForgotPasswordFragment">



    <Button
        android:id="@+id/continue_button"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="45dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/continue_activation"
        app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_input_layout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/NormalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/new_password_label"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/NormalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/verify_account"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/InputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/textView4"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_text_input_layout"
        android:background="@drawable/edittext_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/InputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_text_input_layout"
        style="@style/InputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/textView4"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/edittext_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            style="@style/InputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>